<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background=""
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_welcome" />

        <Button
            android:id="@+id/rutificador"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btnRutificador"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/CalcularIMC"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btnIMC"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ConversorMoneda"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btnMoneda"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/NumeroAletorio"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btnAletorio"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvDescripcion"
            android:textAlignment="center" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>